--- a/css/home.css
+++ b/css/home.css
@@ -96,7 +96,7 @@ a {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to top, rgba(0, 0, 0, .8), rgba(0, 0, 0, .3)), 
-    url(img/banner.jpg);
+    url(../img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%; 
