--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
     padding: 8px 30px;
     transition: background-color var(--transition);
 
-    background-color: #ffa64e;  
+    background-color: var(--color-orange);  
 
     &:hover {
         background-color: #ff850c;
