--- a/css/index.css
+++ b/css/index.css
@@ -5,9 +5,15 @@
 
 .Cabecalho-Page {
     width: 100%;
-    height: 100px;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
     padding: 0 30px;
 }
+
 
 .btn {
     border: 2px solid var(--color-purple) ;
