--- a/css/home.css
+++ b/css/home.css
@@ -2,14 +2,19 @@
     --color-light: #ffffff; 
     --color-dark: #000;
     --color-orange: #ffa64e; 
+    --color-orange: #ffa64e; 
+    --color-orange-focus: #f9ad62; 
+    --color-orange-hover: #fe8f20; 
+    --color-orange-active: #a71431; 
     --transition: .5s;
+        font-size: 16px;
 }
 
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    /* font-family: var(--font-body); */
-
+    font-family: "Anek Gujarati",sans-serif;
 }
 
 .html {
@@ -32,6 +37,90 @@
 }
 
 /*              Fim Cabeçalho               */ 
+
+/*              Ínicio Login                 */ 
+.Cabecalho-Page-1{
+    display:inline-block;
+    height: 25dvh;
+    align-content: center;
+    justify-content: center;
+    font-size: 3rem;
+    text-shadow: 1px 1px 20px #212121;
+}
+
+.login{
+    width: 100%;
+    max-width: 330px;
+    background-color: #212121;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 3px 3px 5px var(--color-orange);
+}
+.login > h2 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.5rem;
+    padding-bottom: 10px;
+}
+.login__form {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    
+}
+.login__input {
+    text-align: center;
+    border: none;
+    border-radius: 16px;
+    padding: 15px;
+    font-size: 0.85rem;
+    font-weight: 600;
+    background-color: #121212;
+    color: #f2f2f2;
+    
+}
+.login__button {
+    text-align: center;
+    border: none;
+    border-radius: 20px;
+    width: 15dvh;
+    padding: 10px;
+    align-self: center;
+    font-size: 0.85rem;
+    font-weight: 700;
+    background-color: var(--color-orange);
+    cursor: pointer;
+    color: #121212;
+}
+.login__input:focus {
+    outline: 1.7px solid var(--color-orange-focus);
+}
+.login__button:hover {
+    outline: 1.7px solid #ddd;
+    background-color: var(--color-orange-hover);
+    color: #212121;
+    
+}
+.login__button:active {
+    outline: 1.7px solid #f2f2f2;
+    background-color: var(--color-orange-active);
+    color: #f2f2f2;
+}
+
+
+.container_login{
+    background: url("../img/vinicola.jpg");
+    color: var(--color-orange-hover);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100dvh;
+    flex-direction: column;
+    display: none;
+}
+
+/*              Fim Login               */ 
 
 /*              Ínicio Menu                 */ 
 ul {
@@ -100,6 +189,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%; 
+    display: block;
 } 
 /*              Fim Hero             */ 
 
