--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     --color-orange: #ffa64e; 
     --color-orange-focus: #f9ad62; 
     --color-orange-hover: #fe8f20; 
-    --color-orange-active: #eb510a; 
+    --color-orange-active: #a71431; 
     --transition: .5s;
         font-size: 16px;
 }
@@ -109,7 +109,7 @@
 
 
 .container_login{
-    background: url("./img/vinicola.jpg");
+    background: url("../img/vinicola.jpg");
     color: var(--color-orange-hover);
     display: flex;
     align-items: center;
@@ -170,7 +170,7 @@ a {
     padding: 8px 30px;
     transition: background-color var(--transition);
 
-    background-color: #f15c17;  
+    background-color: #ffa64e;  
 
     &:hover {
         background-color: transparent;
@@ -261,7 +261,7 @@ a {
     width: 100%;
     height: 80vh;
     background-image: linear-gradient(to top, rgba(49, 49, 49, 0.8), rgba(0, 0, 0, .3)), 
-    url(img/vinicola.jpg);
+    url(../img/vinicola.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
