--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,12 @@
 
 .Cabecalho-Page {
     width: 100%;
-    height: 100dvh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
     justify-content: center;
-    padding: 0 30px;
 }
 
 
