--- a/css/product_page.css
+++ b/css/product_page.css
@@ -4,6 +4,32 @@
     box-sizing: border-box;
 }
 
+#recomendacoes {
+    display: flex;
+    flex-direction: column;
+
+    margin: 24px;
+    padding: 24px;
+    border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.5);
+    font-family: "Anek Gujarati",sans-serif;
+
+    min-height: 50%;
+}
+
+#recomendacoes ul {
+    list-style: none;
+
+    margin: auto;
+}
+
+#recomendacoes li {
+    display: flex;
+    justify-content: center;
+
+    margin: 24px;
+}
+
 .calculator {
     background-image: url(../img/banner.jpg);
     width: 100%;
@@ -20,11 +46,14 @@
     height: 50%;
     background-color: #f8f8f858;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     gap: 50px;
     border-radius: 10px;
+
+    font-family: "Anek Gujarati",sans-serif;
 }
 
 .btn {
@@ -43,9 +72,23 @@
 
 .inputs {
     display: flex;
-
-    width: 40%;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 24px;
 }
 
+.input-full {
+    display: flex;
+    flex-direction: column;
+
+    gap: 12px;
+}
+
+.result {
+    display: flex;
+    flex-direction: column;
+    gap: 12px
+}
+
+.result h3 {
+    text-align: center;
+}
